src/pages/components/Navigation/NavTest.css
.navigation {
  margin: 0;
  z-index: 1;
  position: fixed;
  width: 100%;
  background: #4C4646;
  color: white;
  box-shadow: 0 0.1rem 0.2rem rgba(0, 0, 0, 0.26);
  padding: 0 2rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.navigation a {
  color: white;
}

.navigation h4 {
  margin: 0;
}

.navigation ul.nav-menu {
  padding: 0;
  margin: 0;
  list-style: none;
}

.navigation ul.nav-menu li {
  display: inline-block;
  padding: 1.5rem 1.5rem;
  margin: 0;
}

.navigation ul li:hover {
  background-color: #5a5454;
  transition: background-color 0.2s ease-in;
}

.navigation ul li a {
  display: inline-block;
  padding: 0 1rem;
}

.navigation__left-container, .navigation__right-container {
  width: 12rem;
}

.navigation__left-container a{
  display: inline-block;
}

.navigation__title {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

.underline-effect::after {
  padding-top: 0.15rem;
  content: '';
  display: block;
  width: 0;
  height: 1px;
  border-bottom: 1px solid white;
  transition: width 0.3s ease-in;
}

.underline-effect:hover::after {
  color: white;
  width: 100%;
}

.navigation .mobile-icon {
  display: none;
}

@media (max-width:900px) {

  .navigation {
    flex-direction: column;
    padding: 0;
  }

  .navigation .mobile-icon {
    display: block;
    position: absolute;
    right: 1rem;
    top: 1rem;
  }

  .navigation ul.nav-menu {
    padding-top: 1rem;
    width: 100%;
    text-align: center;
    display: none;
  }

  .navigation ul.nav-menu li {
    display: block;
    padding: 1rem 0;
  }

  .navigation__title--container {
    width: 100%;
    padding: 1rem;
  }

  .underline-effect::after {
    content: none;
  }
}

